--- a/source/Controls/PluginCompact.xaml
+++ b/source/Controls/PluginCompact.xaml
@@ -49,7 +49,8 @@
                                                   Icon="{Binding LastestAchievement.Icon, IsAsync=True}"
                                                   IsGray="false"
                                                   Percent="{Binding LastestAchievement.Percent}"
-                                                  EnableRaretyIndicator="{Binding LastestAchievement.EnableRaretyIndicator}" />
+                                                  EnableRaretyIndicator="{Binding LastestAchievement.EnableRaretyIndicator}"
+                                                  DispalyRaretyValue="{Binding LastestAchievement.DisplayRaretyValue}"/>
                     </StackPanel>
 
                     <Grid Grid.Column="2" Margin="10,0,0,0">
