--- a/source/Views/SuccessStoryOneGameView.xaml
+++ b/source/Views/SuccessStoryOneGameView.xaml
@@ -10,6 +10,7 @@
 
     <UserControl.Resources>
         <converters:StringNullOrEmptyToVisibilityConverter x:Key="StringNullOrEmptyToVisibilityConverter" />
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </UserControl.Resources>
 
     <Grid Margin="10">
@@ -128,6 +129,7 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="10" />
                         <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
                     </Grid.RowDefinitions>
 
                     <StackPanel Grid.Column="0" Grid.Row="0"  Orientation="Horizontal">
@@ -136,16 +138,22 @@
                     </StackPanel>
 
                     <StackPanel Grid.Column="0" Grid.Row="2"  Orientation="Horizontal">
-                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="DarkGray" />
+                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="{Binding Settings.RarityUncommonColor}" />
                         <Label Content="{DynamicResource LOCSuccessStoryNoCommon}" />
                     </StackPanel>
 
                     <StackPanel Grid.Column="0" Grid.Row="4"  Orientation="Horizontal">
-                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="Gold" />
+                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="{Binding Settings.RarityRareColor}" />
                         <Label Content="{DynamicResource LOCSuccessStoryRare}" />
                     </StackPanel>
 
-                    <Grid Grid.Column="2" Grid.RowSpan="5">
+                    <StackPanel Grid.Column="0" Grid.Row="5"  Orientation="Horizontal" Margin="0,10,0,0" 
+                                Visibility="{Binding Settings.UseUltraRare, Converter={StaticResource BooleanToVisibilityConverter}}">
+                        <Label Content="&#127942;" Margin="0,0,5,0" Foreground="{Binding Settings.RarityUltraRareColor}" />
+                        <Label Content="{DynamicResource LOCSuccessStoryUltraRare}" />
+                    </StackPanel>
+
+                    <Grid Grid.Column="2" Grid.RowSpan="6">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="15" />
@@ -157,19 +165,26 @@
                             <RowDefinition Height="auto" />
                             <RowDefinition Height="10" />
                             <RowDefinition Height="auto" />
+                            <RowDefinition Height="auto" />
                         </Grid.RowDefinitions>
 
                         <Label Grid.Column="0" Grid.Row="0" Name="PART_AchCommon" Content="xxxx" HorizontalAlignment="Right" />
                         <Label Grid.Column="0" Grid.Row="2" Name="PART_AchNoCommon" Content="xxxx" HorizontalAlignment="Right" />
                         <Label Grid.Column="0" Grid.Row="4" Name="PART_AchRare" Content="xxxx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="0" Grid.Row="5" Name="PART_AchUltraRare" Content="xxxx" HorizontalAlignment="Right" 
+                               Visibility="{Binding Settings.UseUltraRare, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,10,0,0" />
 
                         <Label Grid.Column="1" Grid.Row="0" Content="/" HorizontalAlignment="Center" />
                         <Label Grid.Column="1" Grid.Row="2" Content="/" HorizontalAlignment="Center" />
                         <Label Grid.Column="1" Grid.Row="4" Content="/" HorizontalAlignment="Center" />
+                        <Label Grid.Column="1" Grid.Row="5" Content="/" HorizontalAlignment="Center" 
+                               Visibility="{Binding Settings.UseUltraRare, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,10,0,0" />
 
                         <Label Grid.Column="2" Grid.Row="0" Name="PART_AchCommonTotal" Content="xxxx" HorizontalAlignment="Right" />
-                        <Label Grid.Column="2" Grid.Row="2" Name="PART_AchNoCommonTotal" Content="xx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="2" Grid.Row="2" Name="PART_AchNoCommonTotal" Content="xxxx" HorizontalAlignment="Right" />
                         <Label Grid.Column="2" Grid.Row="4" Name="PART_AchRareTotal" Content="xxxx" HorizontalAlignment="Right" />
+                        <Label Grid.Column="2" Grid.Row="5" Name="PART_AchUltraRareTotal" Content="xxxx" HorizontalAlignment="Right" 
+                               Visibility="{Binding Settings.UseUltraRare, Converter={StaticResource BooleanToVisibilityConverter}}" Margin="0,10,0,0" />
                     </Grid>
                 </Grid>
             </Grid>
