--- a/source/Controls/PluginCompact.xaml
+++ b/source/Controls/PluginCompact.xaml
@@ -11,6 +11,7 @@
         xmlns:converters1="clr-namespace:SuccessStory.Converters"
         xmlns:customs="clr-namespace:SuccessStory.Controls.Customs"
         mc:Ignorable="d" d:DesignHeight="100" d:DesignWidth="100"
+        d:DataContext="{d:DesignInstance Type=local:PluginCompactDataContext, IsDesignTimeCreatable=True}"
         MaxHeight="{Binding RelativeSource={RelativeSource AncestorType=ContentControl}, Path=MaxHeight}">
 
     <controls:PluginUserControlExtend.Resources>
