--- a/source/Controls/PluginCompact.xaml
+++ b/source/Controls/PluginCompact.xaml
@@ -38,20 +38,20 @@
                     <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
 
-                <Grid Name="PART_DisplayLastest" Grid.Row="0" Grid.Column="1" 
-                      Visibility="{Binding DisplayLastest, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Grid Name="PART_DisplayLastest" Grid.Row="0" Grid.Column="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <StackPanel Grid.Column="0" Margin="5,0,5,0" VerticalAlignment="Top">
-                        <customs:AchievementImage Height="{Binding Height}" Width="{Binding Height}"
-                                                  Icon="{Binding LastestAchievement.Icon, IsAsync=True}"
+                    <StackPanel Grid.Column="0" Margin="5,0,5,0" VerticalAlignment="Top" Name="PART_AchievementImage">
+                        <!--customs:AchievementImage Height="{Binding Height}" 
+                                                  Width="{Binding Height}"
+                                                  Icon="{Binding LastestAchievement.Icon}"
                                                   IsGray="false"
                                                   Percent="{Binding LastestAchievement.Percent}"
                                                   EnableRaretyIndicator="{Binding LastestAchievement.EnableRaretyIndicator}"
-                                                  DispalyRaretyValue="{Binding LastestAchievement.DisplayRaretyValue}"/>
+                                                  DispalyRaretyValue="{Binding LastestAchievement.DisplayRaretyValue}" /-->
                     </StackPanel>
 
                     <Grid Grid.Column="2" Margin="10,0,0,0">
@@ -70,19 +70,30 @@
                                 <ColumnDefinition Width="auto" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Grid.Column="0" Text="{Binding LastestAchievement.Name}" Foreground="{DynamicResource TextBrush}" 
+                            <TextBlock Grid.Column="0" Name="PART_LastestAchievementName" Foreground="{DynamicResource TextBrush}" 
+                                       MouseEnter="TextBlock_MouseEnter" TextTrimming="CharacterEllipsis">
+                                <TextBlock.ToolTip>
+                                    <ToolTip Name="PART_LastestAchievementNameToolTip" />
+                                </TextBlock.ToolTip>
+                            </TextBlock>
+                            <TextBlock Grid.Column="1" TextAlignment="Right" Foreground="{DynamicResource TextBrush}"
+                                       Name="PART_LastestAchievemenDateWhenUnlocked" />
+                            <!--TextBlock Grid.Column="0" Text="{Binding LastestAchievement.Name}" Foreground="{DynamicResource TextBrush}" 
                                        MouseEnter="TextBlock_MouseEnter" TextTrimming="CharacterEllipsis">
                                 <TextBlock.ToolTip>
                                     <ToolTip Content="{Binding LastestAchievement.Name}" />
                                 </TextBlock.ToolTip>
                             </TextBlock>
                             <TextBlock Grid.Column="1" TextAlignment="Right" Foreground="{DynamicResource TextBrush}"
-                                      Text="{Binding LastestAchievement.DateWhenUnlocked, Converter={StaticResource LocalDateTimeConverter}}" />
+                                      Text="{Binding LastestAchievement.DateWhenUnlocked, Converter={StaticResource LocalDateTimeConverter}}" /-->
                         </Grid>
 
-                        <TextBlock Grid.Row="1" Text="{Binding LastestAchievement.Description}" VerticalAlignment="Top"
+                        <TextBlock Grid.Row="1" Name="PART_LastestAchievementDescription" VerticalAlignment="Top"
                                    TextTrimming="CharacterEllipsis"
                                    TextWrapping="Wrap" Foreground="{DynamicResource TextBrushDarker}" />
+                        <!--TextBlock Grid.Row="1" Text="{Binding LastestAchievement.Description}" VerticalAlignment="Top"
+                                   TextTrimming="CharacterEllipsis"
+                                   TextWrapping="Wrap" Foreground="{DynamicResource TextBrushDarker}" /-->
                     </Grid>
                 </Grid>
 
